# Django-Fastly

./: .gitignore  manage.py  pyproject.toml  requirements.txt  setup.cfg
sr_django/: asgi.py  settings.py  urls.py  wsgi.py
sr_libs/: manage.py
sr_libs/accounts/: apps.py  conf.py  models.py  registry.py  serializers.py  settings.py  views.py
sr_libs/audit_logger/: admin.py  apps.py  authentication.py  config.py  function.py  middleware.py  mixins.py  models.py  permissions.py  serializers.py  settings.py  urls.py  utils.py  views.py
sr_libs/audit_logger/migrations/: 0001_initial.py  0002_rename_model_name_auditlog_category_and_more.py
sr_libs/authentication/: admin.py  apps.py  authentication.py  backends.py  config.py  context.py  models.py  resource.py  serializers.py  settings.py  urls.py  views.py
sr_libs/authentication/migrations/: 0001_initial.py
sr_libs/dal/: admin.py  apps.py  config.py  derived.py  mixins.py  registry.py  resource.py  serializers.py  settings.py  types.py  urls.py  utils.py  viewset.py  viewsets.py
sr_libs/delivery_channels/: apps.py  config.py  settings.py  urls.py  views.py
sr_libs/delivery_channels/managers/: channelmanager.py
sr_libs/delivery_channels/services/: email.py  live.py  sms.py
sr_libs/fingerprint/: apps.py  conf.py  config.py  helpers.py  models.py  settings..py  settings.py  urls.py  utils.py  views.py
sr_libs/fingerprint/migrations/: 0001_initial.py
sr_libs/model_trigger/: admin.py  apps.py  config.py  models.py  registry.py  scheduled_tasks.py  settings.py  signals.py  tasks.py
sr_libs/otp/: admin.py  apps.py  config.py  models.py  settings.py  urls.py  utils.py  views.py
sr_libs/otp_sms/: apps.py  services.py  settings.py  views.py
sr_libs/sr_core/: asgi.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
