[project]
name = "django-saintrelion-libs"
version = "7.3.0"
description = "Modular Django libraries"
dependencies = [
    "django",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "webauthn",
    "django-eventstream",
    "django-otp",
    "celery",
    "redis",
    "gevent"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"