[project]
name = "django-saintrelion-libs"
version = "8.0.14"
description = "Modular Django libraries"
dependencies = [
    "django",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "webauthn",
    "django-eventstream",
    "django-otp",
    "django-filter",
    "celery",
    "redis",
    "gevent"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"