[project]
name = "django-saintrelion-libs"
version = "9.0.10"
description = "Modular Django libraries"
dependencies = [
    "django",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "webauthn",
    "django-eventstream",
    "django-otp",
    "django-filter",
    "celery",
    "redis",
    "gevent"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"