[bumpversion]
current_version = 6.0.0
commit = True
tag = True
tag_name = v{new_version}
files = pyproject.toml

[options]
packages = find:
include =
    sr_libs*
exclude =
    sr_django*

[bumpversion:part:patch]
first_value = 0

[bumpversion:part:minor]
first_value = 0

[bumpversion:part:major]
first_value = 0
